--- a/content/themes/rolledesign/sass/layout/_gutenberg.scss
+++ b/content/themes/rolledesign/sass/layout/_gutenberg.scss
@@ -318,7 +318,7 @@ $color-twitter: #1da1f2;
     width: calc(100% - 4rem);
 
     pre {
-      margin-left: 2rem;
+      margin-left: 0;
       width: calc(100% - 8rem);
     }
 
